fix scoreboard, improve mobile wrap of teamnames

--- a/src/components/FinishedGameDisplay/FinishedGameDisplay.scss
+++ b/src/components/FinishedGameDisplay/FinishedGameDisplay.scss
@@ -11,8 +11,16 @@
     margin-bottom: 0.6em;
 
     &>h3 {
+
+        & > .flag-icon {
+            padding: 0 0.2em;
+        }
         margin: 0;
         padding: 0;
+        display: inline-flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
     }
 }
 
